# engram

./: .gitignore  LICENSE  README.md  local_types.py  notes.md  pyproject.toml
speed/: benchmark.py  conditional_precompute.py  score_matrix_extraction.py  scoring_operations.py  scoring_precompute.py
src/: layout_builder.py  local_types.py  matrix_based_builder.py
tests/: test_layout_builder.py  test_matrix_based_builder.py
